Added a new file

--- a/6_Python_List_Challenges/Dictionary_code.ipynb
+++ b/6_Python_List_Challenges/Dictionary_code.ipynb
@@ -40,6 +40,86 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 02. Supermarket"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter items and its net  price, like this \"CANDY 20\": \n",
+      "\n",
+      "APPLE JUICE 12\n",
+      "POTATO CHIPS 30\n",
+      "CANDY 5\n",
+      "CANDY 5\n",
+      "APPLE JUICE 20\n",
+      "CANDY 5\n",
+      "POTATO CHIPS 30\n",
+      "\n",
+      "OrderedDict([('APPLE JUICE', 32), ('POTATO CHIPS', 60), ('CANDY', 15)])\n"
+     ]
+    }
+   ],
+   "source": [
+    "\"\"\"\n",
+    "Problem Statement:\n",
+    "    You are the manager of a supermarket. You have a list of items together with their \n",
+    "    prices that consumers bought on a particular day. Your task is to print each item_name \n",
+    "    and net_price in order of its first occurrence.   \n",
+    "Hint: \n",
+    "    item_name = Name of the item. \n",
+    "    net_price = Quantity of the item sold multiplied by the price of each item.\n",
+    "    try to use new class for dictionary : OrderedDict \n",
+    "Sample Input:\n",
+    "    BANANA FRIES 12\n",
+    "    POTATO CHIPS 30\n",
+    "    APPLE JUICE 10\n",
+    "    CANDY 5\n",
+    "    APPLE JUICE 10\n",
+    "    CANDY 5\n",
+    "    CANDY 5\n",
+    "    CANDY 5\n",
+    "    POTATO CHIPS 30\n",
+    "Sample Output:\n",
+    "    BANANA FRIES 12\n",
+    "    POTATO CHIPS 60\n",
+    "    APPLE JUICE 20\n",
+    "    CANDY 20\n",
+    "\"\"\" \n",
+    "\n",
+    "from collections import OrderedDict \n",
+    "food= OrderedDict()   # OrderedDict preserves the order in which the keys are inserted\n",
+    "\n",
+    "print('Enter items and its net  price, like this \"CANDY 20\": \\n')\n",
+    "while(True):\n",
+    "    item= input()    # take input, if no input then break\n",
+    "    if not item:\n",
+    "        break \n",
+    "\n",
+    "    list1 = item.split()    # split item and price and converting price into integer\n",
+    "    value = int(list1[-1])\n",
+    "    key = \" \".join(list1[:-1])\n",
+    "\n",
+    "    food[key]= (food[key] +int(value)) if key in food else int(value)\n",
+    "\n",
+    "#for x in food:\n",
+    "#    print(x,food[x])\n",
+    "\n",
+    "'''Or'''\n",
+    "\n",
+    "print(food)\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
