--- a/6_Python_List_Challenges/Dictionary_code.ipynb
+++ b/6_Python_List_Challenges/Dictionary_code.ipynb
@@ -120,6 +120,65 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 03. Teen Calculator"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter string: {'a' : 2, 'b' : 15, 'c' : 13}\n",
+      "Dictionary: {'a': 2, 'b': 15, 'c': 13}\n",
+      "Desired sum: 17\n"
+     ]
+    }
+   ],
+   "source": [
+    "\"\"\"\n",
+    "Problem Statement:\n",
+    "    Take dictionary as input from user with keys, a b c, with some integer values and\n",
+    "    print their sum. However, if any of the values is a 'teen' in the range 13 to 19 \n",
+    "    inclusive then that value counts as 0, except 15 and 16 do not count as a teens. \n",
+    "    Write a separate helper \"def fix_teen(n):\"that takes in an int value and returns \n",
+    "    that value fixed for the teen rule. In this way, you avoid repeating the teen code \n",
+    "    3 times.\n",
+    "Hint: \n",
+    "    from ast import literal_eval\n",
+    "    dict1 = literal_eval(\"{'a': 2, 'b' : 15, 'c' : 13}\") \n",
+    "Sample Input:\n",
+    "    {'a' : 2, 'b' : 15, 'c' : 13}\n",
+    "Sample Output:\n",
+    "    Sum = 17\n",
+    "\"\"\" \n",
+    "\n",
+    "from ast import literal_eval\n",
+    "\n",
+    "def fix_teen(n):\n",
+    "    if n in range(13,20) and (n not in (15,16)):\n",
+    "        return 0\n",
+    "    else:\n",
+    "        return n\n",
+    "\n",
+    "\n",
+    "dict1 = literal_eval(input('Enter string: '))    # convert input string to dictionary\n",
+    "print('Dictionary:',dict1)\n",
+    "sumd= 0       # sumd variable to add no.\n",
+    "\n",
+    "for x in dict1:\n",
+    "    sumd += fix_teen(dict1[x])\n",
+    "    \n",
+    "print('Desired sum:',sumd)\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
