--- a/6_Python_List_Challenges/Dictionary_code.ipynb
+++ b/6_Python_List_Challenges/Dictionary_code.ipynb
@@ -179,6 +179,47 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 04. Character Frequency"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter the string: www.google.com\n",
+      "{'w': 3, '.': 2, 'g': 2, 'o': 3, 'l': 1, 'e': 1, 'c': 1, 'm': 1}\n"
+     ]
+    }
+   ],
+   "source": [
+    "\"\"\"\n",
+    "Problem Statement:\n",
+    "    This program accepts a string from User and counts the number of characters \n",
+    "    (character frequency) in the input string. \n",
+    "Sample Input:\n",
+    "    www.google.com\n",
+    "Sample Output:\n",
+    "    {'c': 1, 'e': 1, 'g': 2, 'm': 1, 'l': 1, 'o': 3, '.': 2, 'w': 3}\n",
+    "\"\"\" \n",
+    "\n",
+    "str1= input('Enter the string: ')\n",
+    "freq= {ch: 0 for ch in str1}   # dictionary comprehension\n",
+    "\n",
+    "for ch in str1:\n",
+    "    freq[ch] += 1 \n",
+    "\n",
+    "print(freq)\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
