--- a/6_Python_List_Challenges/Dictionary_code.ipynb
+++ b/6_Python_List_Challenges/Dictionary_code.ipynb
@@ -220,6 +220,93 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 05. Letter Distribution"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter the string: This is a test.Show me the distribution, already!\n",
+      "\n",
+      "Letter Distribution: \n",
+      "t: 6 15%\n",
+      "h: 3 7%\n",
+      "i: 5 12%\n",
+      "s: 5 12%\n",
+      "a: 3 7%\n",
+      "e: 4 10%\n",
+      "o: 2 5%\n",
+      "w: 1 2%\n",
+      "m: 1 2%\n",
+      "d: 2 5%\n",
+      "r: 2 5%\n",
+      "b: 1 2%\n",
+      "u: 1 2%\n",
+      "n: 1 2%\n",
+      "l: 1 2%\n",
+      "y: 1 2%\n"
+     ]
+    }
+   ],
+   "source": [
+    "\"\"\" \n",
+    "Problem Statement:\n",
+    "    Display the distribution of letters from within the text.   \n",
+    "Hint: \n",
+    "    Use dictionaries to solve import string and use string.ascii_lowercase \n",
+    "Algorithm:\n",
+    "    Convert all letters to lowercase, Ignore characters that aren't lowercase letters\n",
+    "    Create a dictionary in which the keys are letters and the values are the counts.\n",
+    "Sample Input:\n",
+    "    This is a test.Show me the distribution, already!\n",
+    "Sample Output:\n",
+    "    t: 6 15%\n",
+    "    h: 3 7%\n",
+    "    i: 5 12%\n",
+    "    s: 5 12%\n",
+    "    a: 3 7%\n",
+    "    e: 4 10%\n",
+    "    o: 2 5%\n",
+    "    w: 1 2%\n",
+    "    m: 1 2%\n",
+    "    d: 2 5%\n",
+    "    r: 2 5%\n",
+    "    b: 1 2%\n",
+    "    u: 1 2%\n",
+    "    n: 1 2%\n",
+    "    l: 1 2%\n",
+    "    y: 1 2%\n",
+    "\"\"\" \n",
+    "\n",
+    "import math\n",
+    "import string\n",
+    "\n",
+    "str2= input('Enter the string: ').lower()\n",
+    "\n",
+    "freq= {ch: 0 for ch in str2 if ch in string.ascii_lowercase}\n",
+    "\n",
+    "for x in str2:\n",
+    "    if x in string.ascii_lowercase:\n",
+    "        freq[x] += 1 \n",
+    "\n",
+    "print()\n",
+    "total= sum(freq.values())\n",
+    "print('Letter Distribution: ')\n",
+    "\n",
+    "for key in freq:\n",
+    "    print('{}: {} {}%'.format(key,freq[key],math.floor((freq[key]/total)*100) ))\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
