Added a new file

--- a/6_Python_List_Challenges/Dictionary_code.ipynb
+++ b/6_Python_List_Challenges/Dictionary_code.ipynb
@@ -307,6 +307,54 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 06. Digit Letter Counter"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter the string: Python 3.2\n",
+      "Letters: 6\n",
+      "Digits: 2\n"
+     ]
+    }
+   ],
+   "source": [
+    "\"\"\"\n",
+    "Problem Statement:\n",
+    "    Write a Python program that accepts a string from User and calculate the number of digits \n",
+    "    and letters.   \n",
+    "Hint: \n",
+    "    Store the letters and Digits as keys in the dictionary  \n",
+    "Sample Input:\n",
+    "    Python 3.2\n",
+    "Sample Output:\n",
+    "    Letters 6 \n",
+    "    Digits 2\n",
+    "\"\"\" \n",
+    "\n",
+    "str1= input('Enter the string: ')\n",
+    "letter= 0\n",
+    "digit= 0\n",
+    "for ch in str1:\n",
+    "    if ch.isalpha():\n",
+    "        letter+= 1\n",
+    "    elif ch.isdigit():\n",
+    "        digit+= 1\n",
+    "        \n",
+    "print('Letters: {}\\nDigits: {}'.format(letter,digit))\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
