Added a new file

--- a/6_Python_List_Challenges/Dictionary_code.ipynb
+++ b/6_Python_List_Challenges/Dictionary_code.ipynb
@@ -355,6 +355,59 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 07. Anagram 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter first string: baste\n",
+      "Enter second string: abets\n",
+      "{'b': 1, 'a': 1, 's': 1, 't': 1, 'e': 1}\n",
+      "{'a': 1, 'b': 1, 'e': 1, 't': 1, 's': 1}\n",
+      "Anagram\n"
+     ]
+    }
+   ],
+   "source": [
+    "\"\"\"\n",
+    "Problem Statement:\n",
+    "    Two words are anagrams if you can rearrange the letters of one to spell the second.  \n",
+    "    For example, the following words are anagrams:\n",
+    "    ['abets', 'baste', 'bates', 'beast', 'beats', 'betas', 'tabes']\n",
+    "    create a function which takes two arguments and return whether they are angram or not. \n",
+    "\"\"\" \n",
+    "\n",
+    "def anagram(a,b):\n",
+    "    if len(a)!= len(b):\n",
+    "        print('Not Anagram')\n",
+    "    else:\n",
+    "        freq1= {}.fromkeys(a,0)  # creating two dictionaries\n",
+    "        freq2= {}.fromkeys(b,0)\n",
+    "        for tup in zip(a,b):     # counting all letters for both strings\n",
+    "            freq1[tup[0]] += 1\n",
+    "            freq2[tup[1]] += 1\n",
+    "\n",
+    "        print(freq1)\n",
+    "        print(freq2)\n",
+    "        if freq1== freq2:    # comparing both dictionaries\n",
+    "            print('Anagram')\n",
+    "\n",
+    "a= input('Enter first string: ')\n",
+    "b= input('Enter second string: ')\n",
+    "anagram(a,b)\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
