Added a new file

--- a/6_Python_List_Challenges/Dictionary_code.ipynb
+++ b/6_Python_List_Challenges/Dictionary_code.ipynb
@@ -408,6 +408,74 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 08. Sentence"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter the string: the lazy dog jumped over the quick brown fox\n",
+      "Output string: vjg ncba fqi lworgf qxgt vjg swkem dtqyp hqz\n"
+     ]
+    }
+   ],
+   "source": [
+    "\"\"\"\n",
+    "Problem Statement:\n",
+    "    You are given a sentence, and want to shift each letter by 2 in alphabet \n",
+    "    to create a secret code. The sentence you want to encode is :\n",
+    "    \"the lazy dog jumped over the quick brown fox\" \n",
+    "    and the output should be like :\n",
+    "    \"vjg ncba fqi lworgf qxgt vjg swkem dtqyp hqz\"\n",
+    "Algorithm:\n",
+    "    Create a dictionary mapping each number to its letter in the alphabet\n",
+    "    Go through each letter in the sentence and find the corresponding number, \n",
+    "    add 2 and then find the new corresponding letter. Make sure to take care \n",
+    "    of the edge cases so that if you get the letter z, it maps to b… ect,\n",
+    "    Print the encoded string  \n",
+    "\"\"\" \n",
+    "\n",
+    "str1= input('Enter the string: ')\n",
+    "alpha= 'abcdefghijklmnopqrstuvwxyz'\n",
+    "newst= ''       # new string for output\n",
+    "maping= {}\n",
+    "\n",
+    "for index,ch in enumerate(alpha,1):\n",
+    "    maping[ch]= index\n",
+    "    \n",
+    "#print(maping)\n",
+    "index= list(alpha)\n",
+    "\n",
+    "for x in str1:\n",
+    "    if x==' ':\n",
+    "        newst += x\n",
+    "    else:\n",
+    "        y= maping[x] +2\n",
+    "        if y>25:\n",
+    "            y= y-26\n",
+    "        newst += index[y-1]\n",
+    "\n",
+    "print('Output string:',newst)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
