Added a new file

--- a/6_Python_List_Challenges/Dictionary_code.ipynb
+++ b/6_Python_List_Challenges/Dictionary_code.ipynb
@@ -469,11 +469,44 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "### 09. Intersection"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[35, 55]\n",
+      "{35, 55}\n"
+     ]
+    }
+   ],
+   "source": [
+    "\"\"\" \n",
+    "Problem Statement:\n",
+    "    With two given lists [1,3,6,78,35,55] and [12,24,35,24,88,120,155]\n",
+    "    Write a program to make a list whose elements are intersection of the \n",
+    "    above given lists.\n",
+    "\"\"\" \n",
+    "\n",
+    "lis1= [1,3,6,78,35,55]\n",
+    "lis2= [12,24,35,24,88,120,55]\n",
+    "\n",
+    "lis3= [num for num in lis1 if num in lis2]  # using list comprehension\n",
+    "print(lis3)\n",
+    "\n",
+    "'''Or'''\n",
+    "\n",
+    "print(set(lis1).intersection(set(lis2)))   # using set data type"
+   ]
   },
   {
    "cell_type": "code",
