Added a new file

--- a/6_Python_List_Challenges/List_Quantitative.ipynb
+++ b/6_Python_List_Challenges/List_Quantitative.ipynb
@@ -447,11 +447,44 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "### 08. H.C.F"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter the space separated numbers: 42 30\n",
+      "The H.C.F. is 6\n"
+     ]
+    }
+   ],
+   "source": [
+    "\"\"\"\n",
+    "Problem Statement:\n",
+    "    Write a program to find H.C.F of two numbers\n",
+    "\n",
+    "\"\"\"\n",
+    "def hcf(x, y):\n",
+    "    smaller = y if x > y else x   # choose the smaller number\n",
+    "        \n",
+    "    for i in range(1, smaller+1):\n",
+    "        if((x % i == 0) and (y % i == 0)):\n",
+    "            hcf = i \n",
+    "    return hcf\n",
+    "\n",
+    "\n",
+    "num1, num2= input('Enter the space separated numbers: ').split()\n",
+    "print(\"The H.C.F. is\", hcf(int(num1), int(num2)))\n"
+   ]
   },
   {
    "cell_type": "code",
