--- a/07_ShoppingList_mini_project/07_Shopping_List_MiniProject.ipynb
+++ b/07_ShoppingList_mini_project/07_Shopping_List_MiniProject.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -12,30 +12,30 @@
       "\n",
       "List of commands to use Shopping List App:\n",
       " ['ADD', 'SHOW', 'HELP', 'DONE']\n",
-      "Enter the command: add\n",
-      "Enter new items: table\n",
+      "Enter the command: ADD\n",
+      "Enter new items: Table\n",
       "\n",
       "List of commands to use Shopping List App:\n",
       " ['ADD', 'SHOW', 'HELP', 'DONE']\n",
-      "Enter the command: add\n",
-      "Enter new items: books\n",
+      "Enter the command: ADD\n",
+      "Enter new items: Books\n",
       "\n",
       "List of commands to use Shopping List App:\n",
       " ['ADD', 'SHOW', 'HELP', 'DONE']\n",
-      "Enter the command: add\n",
-      "Enter new items: chair\n",
+      "Enter the command: ADD\n",
+      "Enter new items: chairs\n",
       "\n",
       "List of commands to use Shopping List App:\n",
       " ['ADD', 'SHOW', 'HELP', 'DONE']\n",
-      "Enter the command: show\n",
+      "Enter the command: SHOW\n",
       "*****Here’s your list*****\n",
-      "table\n",
-      "books\n",
-      "chair\n",
+      "Table\n",
+      "Books\n",
+      "chairs\n",
       "\n",
       "List of commands to use Shopping List App:\n",
       " ['ADD', 'SHOW', 'HELP', 'DONE']\n",
-      "Enter the command: help\n",
+      "Enter the command: HELP\n",
       "Details of commands: \n",
       "             ADD   : add new item in list\n",
       "             SHOW  : display the current list\n",
@@ -44,34 +44,39 @@
       "\n",
       "List of commands to use Shopping List App:\n",
       " ['ADD', 'SHOW', 'HELP', 'DONE']\n",
-      "Enter the command: add\n",
-      "Enter new items: oil\n",
+      "Enter the command: ADD\n",
+      "Enter new items: Mobile\n",
       "\n",
       "List of commands to use Shopping List App:\n",
       " ['ADD', 'SHOW', 'HELP', 'DONE']\n",
       "Enter the command: show\n",
-      "*****Here’s your list*****\n",
-      "table\n",
-      "books\n",
-      "chair\n",
-      "oil\n",
+      "Wrong input! Please try again...\n",
       "\n",
       "List of commands to use Shopping List App:\n",
       " ['ADD', 'SHOW', 'HELP', 'DONE']\n",
-      "Enter the command: done\n"
+      "Enter the command: SHOW\n",
+      "*****Here’s your list*****\n",
+      "Table\n",
+      "Books\n",
+      "chairs\n",
+      "Mobile\n",
+      "\n",
+      "List of commands to use Shopping List App:\n",
+      " ['ADD', 'SHOW', 'HELP', 'DONE']\n",
+      "Enter the command: DONE\n"
      ]
     }
    ],
    "source": [
     "\"\"\"\n",
-    "Challenge 1\n",
+    "Challenge 1:\n",
     "    We are going to make a \"Shopping List\" app. \n",
     "    Run the script to start using it.\n",
     "    Put new things into the list one at a time\n",
     "    Enter the word DONE - in all CAPS - to QUIT the program\n",
     "    And once i quit, I want the app to show me everything thats on my list.\n",
     "\n",
-    "Hint 1\n",
+    "Hint 1:\n",
     "    Step 1: Make a list to hold onto our command.\n",
     "    Step 2: Print out instructions on how to use the app\n",
     "    Step 3: Ask for new command\n",
@@ -80,7 +85,7 @@
     "    Step 6: print out the list\n",
     "\"\"\"\n",
     "\n",
-    "def add_item(lis):\n",
+    "def add_item(lis): \n",
     "    '''Add new item in shopping list'''\n",
     "    lis.append(input('Enter new items: '))\n",
     "\n",
@@ -99,7 +104,132 @@
     "             DONE  : quit the app''')\n",
     "\n",
     "    \n",
-    "# Make a list to hold onto our command.\n",
+    "# Make a list to hold onto our items.\n",
+    "shopping_list = []\n",
+    "\n",
+    "func= ['ADD','SHOW','HELP','DONE']    # list of all commands\n",
+    "\n",
+    "while(True):\n",
+    "    \n",
+    "    print('\\nList of commands to use Shopping List App:\\n',func)\n",
+    "    command = input(\"Enter the command: \")   # ask for command\n",
+    "    \n",
+    "    if command in func:\n",
+    "        if command.upper()== 'ADD':\n",
+    "            add_item(shopping_list)\n",
+    "        \n",
+    "        elif command== 'SHOW':\n",
+    "            show(shopping_list)\n",
+    "        \n",
+    "        elif command== 'HELP':\n",
+    "            list_help()\n",
+    "        \n",
+    "        elif command== 'DONE':\n",
+    "            break\n",
+    "    else:\n",
+    "        print('Wrong input! Please try again...')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "List of commands to use Shopping List App:\n",
+      " ['ADD', 'SHOW', 'HELP', 'DONE']\n",
+      "Enter the command: help\n",
+      "Wrong input! Please try again...\n",
+      "\n",
+      "List of commands to use Shopping List App:\n",
+      " ['ADD', 'SHOW', 'HELP', 'DONE']\n",
+      "Enter the command: HELP\n",
+      "Details of commands: \n",
+      "        ADD   : add new item in list\n",
+      "        SHOW  : display the current list\n",
+      "        HELP  : give details about the options\n",
+      "        DONE  : quit the app\n",
+      "\n",
+      "List of commands to use Shopping List App:\n",
+      " ['ADD', 'SHOW', 'HELP', 'DONE']\n",
+      "Enter the command: ADD\n",
+      "Enter new items: Table\n",
+      "\n",
+      "List of commands to use Shopping List App:\n",
+      " ['ADD', 'SHOW', 'HELP', 'DONE']\n",
+      "Enter the command: ADD\n",
+      "Enter new items: Books\n",
+      "\n",
+      "List of commands to use Shopping List App:\n",
+      " ['ADD', 'SHOW', 'HELP', 'DONE']\n",
+      "Enter the command: ADD\n",
+      "Enter new items: Chairs\n",
+      "\n",
+      "List of commands to use Shopping List App:\n",
+      " ['ADD', 'SHOW', 'HELP', 'DONE']\n",
+      "Enter the command: SHOW\n",
+      "*****Here’s your list*****\n",
+      "1 Table\n",
+      "2 Books\n",
+      "3 Chairs\n",
+      "\n",
+      "List of commands to use Shopping List App:\n",
+      " ['ADD', 'SHOW', 'HELP', 'DONE']\n",
+      "Enter the command: ADD\n",
+      "Enter new items: Body Lotion\n",
+      "\n",
+      "List of commands to use Shopping List App:\n",
+      " ['ADD', 'SHOW', 'HELP', 'DONE']\n",
+      "Enter the command: SHOW\n",
+      "*****Here’s your list*****\n",
+      "1 Table\n",
+      "2 Books\n",
+      "3 Chairs\n",
+      "4 Body Lotion\n",
+      "\n",
+      "List of commands to use Shopping List App:\n",
+      " ['ADD', 'SHOW', 'HELP', 'DONE']\n",
+      "Enter the command: DONE\n"
+     ]
+    }
+   ],
+   "source": [
+    "\"\"\"\n",
+    "Challenge 2:\n",
+    "    If I type SHOW, I should be able to see what is currently in the list.\n",
+    "    If I type HELP, I should be able to see all the help for these special commands.\n",
+    "    Show the item in the list serially starting from 1.\n",
+    "Hint 2:\n",
+    "    Step 1: Have a HELP command\n",
+    "    Step 2: Have a SHOW command\n",
+    "    Step 3: Add a function for adding into the list \n",
+    "    Step 4: Cleanup the code in general\n",
+    "\"\"\"\n",
+    "\n",
+    "def add_item(lis): \n",
+    "    '''Add new item in shopping list'''\n",
+    "    lis.append(input('Enter new items: '))\n",
+    "\n",
+    "def show(lis):\n",
+    "    '''Display the list items'''\n",
+    "    print(\"*****Here’s your list*****\")\n",
+    "    for index, item in enumerate(lis,1):\n",
+    "        print(index,item)\n",
+    "    \n",
+    "def list_help():\n",
+    "    '''Show details of commands'''\n",
+    "    print('''Details of commands: \n",
+    "        ADD   : add new item in list\n",
+    "        SHOW  : display the current list\n",
+    "        HELP  : give details about the options\n",
+    "        DONE  : quit the app''')\n",
+    "\n",
+    "    \n",
+    "# Make a list to hold onto our items.\n",
     "shopping_list = []\n",
     "\n",
     "func= ['ADD','SHOW','HELP','DONE']   # list of all commands\n",
@@ -109,17 +239,17 @@
     "    print('\\nList of commands to use Shopping List App:\\n',func)\n",
     "    command = input(\"Enter the command: \")   # ask for command\n",
     "    \n",
-    "    if command.upper() in func:\n",
-    "        if command.upper()== 'ADD':\n",
+    "    if command in func:\n",
+    "        if command== 'ADD':\n",
     "            add_item(shopping_list)\n",
     "        \n",
-    "        if command.upper()== 'SHOW':\n",
+    "        elif command== 'SHOW':\n",
     "            show(shopping_list)\n",
     "        \n",
-    "        if command.upper()== 'HELP':\n",
+    "        elif command== 'HELP':\n",
     "            list_help()\n",
     "        \n",
-    "        if command.upper()== 'DONE':\n",
+    "        elif command== 'DONE':\n",
     "            break\n",
     "    else:\n",
     "        print('Wrong input! Please try again...')\n"
