Added a new file

--- a/07_ShoppingList_mini_project/07_Shopping_List_MiniProject.ipynb
+++ b/07_ShoppingList_mini_project/07_Shopping_List_MiniProject.ipynb
@@ -257,6 +257,159 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "List of commands to use Shopping List App:\n",
+      " ['ADD', 'REMOVE', 'INSERT', 'SHOW', 'HELP', 'DONE']\n",
+      "Enter the command: Add\n",
+      "Enter new items: Table\n",
+      "\n",
+      "List of commands to use Shopping List App:\n",
+      " ['ADD', 'REMOVE', 'INSERT', 'SHOW', 'HELP', 'DONE']\n",
+      "Enter the command: add\n",
+      "Enter new items: Books\n",
+      "\n",
+      "List of commands to use Shopping List App:\n",
+      " ['ADD', 'REMOVE', 'INSERT', 'SHOW', 'HELP', 'DONE']\n",
+      "Enter the command: add\n",
+      "Enter new items: Pens\n",
+      "\n",
+      "List of commands to use Shopping List App:\n",
+      " ['ADD', 'REMOVE', 'INSERT', 'SHOW', 'HELP', 'DONE']\n",
+      "Enter the command: show\n",
+      "*****Here’s your list*****\n",
+      "1 Table\n",
+      "2 Books\n",
+      "3 Pens\n",
+      "\n",
+      "List of commands to use Shopping List App:\n",
+      " ['ADD', 'REMOVE', 'INSERT', 'SHOW', 'HELP', 'DONE']\n",
+      "Enter the command: insert\n",
+      "Enter the space() separated specific index and item: 3 copies\n",
+      "\n",
+      "List of commands to use Shopping List App:\n",
+      " ['ADD', 'REMOVE', 'INSERT', 'SHOW', 'HELP', 'DONE']\n",
+      "Enter the command: add\n",
+      "Enter new items: Cover\n",
+      "\n",
+      "List of commands to use Shopping List App:\n",
+      " ['ADD', 'REMOVE', 'INSERT', 'SHOW', 'HELP', 'DONE']\n",
+      "Enter the command: show\n",
+      "*****Here’s your list*****\n",
+      "1 Table\n",
+      "2 Books\n",
+      "3 copies\n",
+      "4 Pens\n",
+      "5 Cover\n",
+      "\n",
+      "List of commands to use Shopping List App:\n",
+      " ['ADD', 'REMOVE', 'INSERT', 'SHOW', 'HELP', 'DONE']\n",
+      "Enter the command: remove\n",
+      "Enter the index to remove item: 3\n",
+      "Removed item: copies\n",
+      "\n",
+      "List of commands to use Shopping List App:\n",
+      " ['ADD', 'REMOVE', 'INSERT', 'SHOW', 'HELP', 'DONE']\n",
+      "Enter the command: show\n",
+      "*****Here’s your list*****\n",
+      "1 Table\n",
+      "2 Books\n",
+      "3 Pens\n",
+      "4 Cover\n",
+      "\n",
+      "List of commands to use Shopping List App:\n",
+      " ['ADD', 'REMOVE', 'INSERT', 'SHOW', 'HELP', 'DONE']\n",
+      "Enter the command: lal\n",
+      "Wrong input! Please try again...\n",
+      "\n",
+      "List of commands to use Shopping List App:\n",
+      " ['ADD', 'REMOVE', 'INSERT', 'SHOW', 'HELP', 'DONE']\n",
+      "Enter the command: done\n"
+     ]
+    }
+   ],
+   "source": [
+    "\"\"\"\n",
+    "Challenge 3:\n",
+    "    User can enter SHOW or Show or show, similar for DONE and HELP, but the \n",
+    "    program should do the required job. Let us accept command using a comma \n",
+    "    separated string.\n",
+    "    Also there should be a functionality to add an item at a specific index\n",
+    "    There should be a functionality to remove command from the list at a specific \n",
+    "    index using REMOVE\n",
+    "\"\"\"\n",
+    "\n",
+    "def add_item(lis): \n",
+    "    '''Add new item in shopping list'''\n",
+    "    lis.append(input('Enter new items: '))\n",
+    "\n",
+    "def show(lis):\n",
+    "    '''Display the list items'''\n",
+    "    print(\"*****Here’s your list*****\")\n",
+    "    for index, item in enumerate(lis,1):\n",
+    "        print(index,item)\n",
+    "        \n",
+    "def list_help():\n",
+    "    '''Show details of commands'''\n",
+    "    print('''Details of commands: \n",
+    "             ADD   : add new item in list\n",
+    "             SHOW  : display the current list\n",
+    "             INSERT: add an item at a specific index\n",
+    "             REMOVE: remove command from the list at a specific index\n",
+    "             HELP  : give details about the options\n",
+    "             DONE  : quit the app\\n''')\n",
+    "\n",
+    "def insert_item(lis):\n",
+    "    '''Insert item in shopping list at specific index'''\n",
+    "    index, val= input('Enter the space(' ') separated specific index and item: ').split(' ')\n",
+    "    lis.insert(int(index)-1,val)\n",
+    "\n",
+    "def remove_item(lis):\n",
+    "    '''Remove item from shopping list'''\n",
+    "    index= input('Enter the index to remove item: ')\n",
+    "    print('Removed item:',shopping_list.pop(int(index)-1))    \n",
+    "\n",
+    "\n",
+    "# Make a list to hold onto our list\n",
+    "shopping_list = []\n",
+    "\n",
+    "func= ['ADD','REMOVE','INSERT','SHOW','HELP','DONE']   # list of all commands\n",
+    "\n",
+    "while(True):\n",
+    "    \n",
+    "    print('\\nList of commands to use Shopping List App:\\n',func)\n",
+    "    command = input(\"Enter the command: \")     # ask for command\n",
+    "    \n",
+    "    if command.upper() in func:\n",
+    "        if command.upper()== 'ADD':\n",
+    "            add_item(shopping_list)\n",
+    "        \n",
+    "        elif command.upper()== 'SHOW':\n",
+    "            show(shopping_list)\n",
+    "        \n",
+    "        elif command.upper()== 'HELP':\n",
+    "            list_help()\n",
+    "            \n",
+    "        elif command.upper()== 'INSERT':\n",
+    "            insert_item(shopping_list)\n",
+    "            \n",
+    "        elif command.upper()== 'REMOVE':\n",
+    "            remove_item(shopping_list)\n",
+    "        \n",
+    "        elif command.upper()== 'DONE':\n",
+    "            break\n",
+    "    else:\n",
+    "        print('Wrong input! Please try again...')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
