--- a/07_ShoppingList_mini_project/07_Shopping_List_MiniProject.ipynb
+++ b/07_ShoppingList_mini_project/07_Shopping_List_MiniProject.ipynb
@@ -410,6 +410,222 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "List of commands to use Shopping List App:\n",
+      " ['ADD', 'REMOVE', 'INSERT', 'SHOW', 'HELP', 'DONE']\n",
+      "Enter the command: add\n",
+      "Enter new items: Tables\n",
+      "\n",
+      "List of commands to use Shopping List App:\n",
+      " ['ADD', 'REMOVE', 'INSERT', 'SHOW', 'HELP', 'DONE']\n",
+      "Enter the command: add\n",
+      "Enter new items: Chairs\n",
+      "\n",
+      "List of commands to use Shopping List App:\n",
+      " ['ADD', 'REMOVE', 'INSERT', 'SHOW', 'HELP', 'DONE']\n",
+      "Enter the command: help\n",
+      "Details of commands: \n",
+      "             ADD   : add new item in list\n",
+      "             SHOW  : display the current list\n",
+      "             INSERT: add an item at a specific index\n",
+      "             REMOVE: remove command from the list at a specific index\n",
+      "             HELP  : give details about the options\n",
+      "             DONE  : quit the app\n",
+      "\n",
+      "\n",
+      "List of commands to use Shopping List App:\n",
+      " ['ADD', 'REMOVE', 'INSERT', 'SHOW', 'HELP', 'DONE']\n",
+      "Enter the command: show\n",
+      "Here’s your list\n",
+      "1 Tables\n",
+      "2 Chairs\n",
+      "\n",
+      "List of commands to use Shopping List App:\n",
+      " ['ADD', 'REMOVE', 'INSERT', 'SHOW', 'HELP', 'DONE']\n",
+      "Enter the command: insert\n",
+      "Enter space() separated specific index and item: 3 Books\n",
+      "\n",
+      "List of commands to use Shopping List App:\n",
+      " ['ADD', 'REMOVE', 'INSERT', 'SHOW', 'HELP', 'DONE']\n",
+      "Enter the command: add\n",
+      "Enter new items: Laptop\n",
+      "\n",
+      "List of commands to use Shopping List App:\n",
+      " ['ADD', 'REMOVE', 'INSERT', 'SHOW', 'HELP', 'DONE']\n",
+      "Enter the command: insert\n",
+      "Enter space() separated specific index and item: as Mobile\n",
+      "No valid integer! Please try again...\n",
+      "\n",
+      "List of commands to use Shopping List App:\n",
+      " ['ADD', 'REMOVE', 'INSERT', 'SHOW', 'HELP', 'DONE']\n",
+      "Enter the command: show\n",
+      "Here’s your list\n",
+      "1 Tables\n",
+      "2 Chairs\n",
+      "3 Books\n",
+      "4 Laptop\n",
+      "\n",
+      "List of commands to use Shopping List App:\n",
+      " ['ADD', 'REMOVE', 'INSERT', 'SHOW', 'HELP', 'DONE']\n",
+      "Enter the command: remove\n",
+      "Enter the index to remove item: 5\n",
+      "\n",
+      "Wrong input! index out of range, Please try again...\n",
+      "\n",
+      "List of commands to use Shopping List App:\n",
+      " ['ADD', 'REMOVE', 'INSERT', 'SHOW', 'HELP', 'DONE']\n",
+      "Enter the command: remove\n",
+      "Enter the index to remove item: 4\n",
+      "Removed item: Laptop\n",
+      "\n",
+      "List of commands to use Shopping List App:\n",
+      " ['ADD', 'REMOVE', 'INSERT', 'SHOW', 'HELP', 'DONE']\n",
+      "Enter the command: show\n",
+      "Here’s your list\n",
+      "1 Tables\n",
+      "2 Chairs\n",
+      "3 Books\n",
+      "\n",
+      "List of commands to use Shopping List App:\n",
+      " ['ADD', 'REMOVE', 'INSERT', 'SHOW', 'HELP', 'DONE']\n",
+      "Enter the command: add\n",
+      "Enter new items: Mobile\n",
+      "\n",
+      "List of commands to use Shopping List App:\n",
+      " ['ADD', 'REMOVE', 'INSERT', 'SHOW', 'HELP', 'DONE']\n",
+      "Enter the command: add\n",
+      "Enter new items: Sim\n",
+      "\n",
+      "List of commands to use Shopping List App:\n",
+      " ['ADD', 'REMOVE', 'INSERT', 'SHOW', 'HELP', 'DONE']\n",
+      "Enter the command: show\n",
+      "Here’s your list\n",
+      "1 Tables\n",
+      "2 Chairs\n",
+      "3 Books\n",
+      "4 Mobile\n",
+      "5 Sim\n",
+      "\n",
+      "List of commands to use Shopping List App:\n",
+      " ['ADD', 'REMOVE', 'INSERT', 'SHOW', 'HELP', 'DONE']\n",
+      "Enter the command: done\n"
+     ]
+    }
+   ],
+   "source": [
+    "\"\"\"\n",
+    "Challenge 4   \n",
+    "    Do all the exception handling for all the extreme use cases.\n",
+    "\"\"\"\n",
+    "\n",
+    "def add_item(lis):\n",
+    "    '''Add new item in shopping list'''\n",
+    "    lis.append(input('Enter new items: '))\n",
+    "    \n",
+    "\n",
+    "def show(lis):\n",
+    "    '''Display the list items'''\n",
+    "    print(\"Here’s your list\")\n",
+    "    try:                  # error hadling for empty string\n",
+    "        if not lis:\n",
+    "            raise ValueError(' ***Empty list*** ')  # raise error with message, jump to\n",
+    "            return                                  # except then print the message\n",
+    "    except ValueError as e:\n",
+    "        print(e)\n",
+    "    \n",
+    "    for index, item in enumerate(lis,1):\n",
+    "        print(index,item)\n",
+    "\n",
+    "\n",
+    "def list_help():\n",
+    "    '''Show details of commands'''\n",
+    "    print('''Details of commands: \n",
+    "             ADD   : add new item in list\n",
+    "             SHOW  : display the current list\n",
+    "             INSERT: add an item at a specific index\n",
+    "             REMOVE: remove command from the list at a specific index\n",
+    "             HELP  : give details about the options\n",
+    "             DONE  : quit the app\\n''')\n",
+    "\n",
+    "\n",
+    "def insert_item(lis):\n",
+    "    '''Insert item in shopping list at specific index'''\n",
+    "    index, val= input('Enter space(' ') separated specific index and item: ').split(' ') \n",
+    "    \n",
+    "    try:           # error handling for non-integer values\n",
+    "        ind= int(index)\n",
+    "    except ValueError:\n",
+    "        print(\"No valid integer! Please try again...\")\n",
+    "        return\n",
+    "        \n",
+    "    lis.insert(ind-1,val)\n",
+    "\n",
+    "\n",
+    "def remove_item(lis):\n",
+    "    '''Remove item from shopping list'''\n",
+    "    try:                    # error hadling for empty string\n",
+    "        if not lis:                                 # raise error with message, jump to\n",
+    "            raise ValueError(' ***Empty list*** ')  # # except then print the message\n",
+    "    except ValueError as e:\n",
+    "        print(e)\n",
+    "        return\n",
+    "    \n",
+    "    try:         # error handling for non-integer values\n",
+    "        index= int(input('Enter the index to remove item: '))\n",
+    "        \n",
+    "        if index in range(-len(lis), len(lis)+1 ) :   # hanling the index out of range error\n",
+    "            print('Removed item:',shopping_list.pop(index-1))\n",
+    "        else:\n",
+    "            print('\\nWrong input! index out of range, Please try again...')\n",
+    "            \n",
+    "    except ValueError:\n",
+    "        print(\"No valid integer! Please try again...\")\n",
+    "\n",
+    "\n",
+    "###########\n",
+    "\n",
+    "# list to store the items\n",
+    "shopping_list = []\n",
+    "\n",
+    "func= ['ADD','REMOVE','INSERT','SHOW','HELP','DONE']   # list of all commands\n",
+    "        \n",
+    "while(True):\n",
+    "    \n",
+    "    print('\\nList of commands to use Shopping List App:\\n',func)\n",
+    "    command = input(\"Enter the command: \")   # ask for command\n",
+    "    \n",
+    "    if command.upper() in func:\n",
+    "        if command.upper()== 'ADD':\n",
+    "            add_item(shopping_list)\n",
+    "        \n",
+    "        elif command.upper()== 'SHOW':\n",
+    "            show(shopping_list)\n",
+    "        \n",
+    "        elif command.upper()== 'HELP':\n",
+    "            list_help()\n",
+    "            \n",
+    "        elif command.upper()== 'INSERT':\n",
+    "            insert_item(shopping_list)\n",
+    "            \n",
+    "        elif command.upper()== 'REMOVE':\n",
+    "            remove_item(shopping_list)\n",
+    "        \n",
+    "        elif command.upper()== 'DONE':\n",
+    "            break\n",
+    "    else:\n",
+    "        print('Wrong input! Please try again...')\n",
+    " "
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
