Added a new file

--- a/07_ShoppingList_mini_project/07_Shopping_List_MiniProject.ipynb
+++ b/07_ShoppingList_mini_project/07_Shopping_List_MiniProject.ipynb
@@ -528,7 +528,6 @@
     "def add_item(lis):\n",
     "    '''Add new item in shopping list'''\n",
     "    lis.append(input('Enter new items: '))\n",
-    "    \n",
     "\n",
     "def show(lis):\n",
     "    '''Display the list items'''\n",
@@ -543,7 +542,6 @@
     "    for index, item in enumerate(lis,1):\n",
     "        print(index,item)\n",
     "\n",
-    "\n",
     "def list_help():\n",
     "    '''Show details of commands'''\n",
     "    print('''Details of commands: \n",
@@ -553,7 +551,6 @@
     "             REMOVE: remove command from the list at a specific index\n",
     "             HELP  : give details about the options\n",
     "             DONE  : quit the app\\n''')\n",
-    "\n",
     "\n",
     "def insert_item(lis):\n",
     "    '''Insert item in shopping list at specific index'''\n",
@@ -566,7 +563,6 @@
     "        return\n",
     "        \n",
     "    lis.insert(ind-1,val)\n",
-    "\n",
     "\n",
     "def remove_item(lis):\n",
     "    '''Remove item from shopping list'''\n",
@@ -587,7 +583,6 @@
     "            \n",
     "    except ValueError:\n",
     "        print(\"No valid integer! Please try again...\")\n",
-    "\n",
     "\n",
     "###########\n",
     "\n",
@@ -622,6 +617,22 @@
     "    else:\n",
     "        print('Wrong input! Please try again...')\n",
     " "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\"\"\"\n",
+    "Challenge 5   \n",
+    "    Store the shopping list in a file. \n",
+    "\"\"\"\n",
+    "f= open(\"list_data.txt\",\"w\")    # open file to store data\n",
+    "\n",
+    "f.writelines(str(shopping_list))  # writing the final list in file\n",
+    "f.close()"
    ]
   },
   {
