--- a/12_Map_Filter_Reduce.ipynb
+++ b/12_Map_Filter_Reduce.ipynb
@@ -50,18 +50,39 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "### 02. Find 3 in number"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "\"\"\"\n",
+    "Find all of the numbers from 1-1000 that have a 3 in them\n",
+    "\"\"\"\n",
+    "####### Method 1 #######\n",
+    "list1 = []\n",
+    "def item(number):\n",
+    "    if '3' in str(number):\n",
+    "        return number\n",
+    "for i in range(1,1001):\n",
+    "    num1 = item(i)\n",
+    "    if num1:\n",
+    "        list1.append(num1)\n",
+    "print(list1)\n",
+    "\n",
+    "####### Method 2 #######\n",
+    "item_3 = [x for x in range(1,1001) if '3' in str(x)]\n",
+    "\n",
+    "####### Method 3 #######\n",
+    "item_3a = list(filter(lambda x: '3' in str(x),list(range(1,1001))))\n",
+    "print(item_3a)\n"
+   ]
   }
  ],
  "metadata": {
