--- a/12_Map_Filter_Reduce.ipynb
+++ b/12_Map_Filter_Reduce.ipynb
@@ -58,9 +58,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[3, 13, 23, 30, 31, 32, 33, 34, 35, 36, 37, 38, 39, 43, 53, 63, 73, 83, 93, 103, 113, 123, 130, 131, 132, 133, 134, 135, 136, 137, 138, 139, 143, 153, 163, 173, 183, 193, 203, 213, 223, 230, 231, 232, 233, 234, 235, 236, 237, 238, 239, 243, 253, 263, 273, 283, 293, 300, 301, 302, 303, 304, 305, 306, 307, 308, 309, 310, 311, 312, 313, 314, 315, 316, 317, 318, 319, 320, 321, 322, 323, 324, 325, 326, 327, 328, 329, 330, 331, 332, 333, 334, 335, 336, 337, 338, 339, 340, 341, 342, 343, 344, 345, 346, 347, 348, 349, 350, 351, 352, 353, 354, 355, 356, 357, 358, 359, 360, 361, 362, 363, 364, 365, 366, 367, 368, 369, 370, 371, 372, 373, 374, 375, 376, 377, 378, 379, 380, 381, 382, 383, 384, 385, 386, 387, 388, 389, 390, 391, 392, 393, 394, 395, 396, 397, 398, 399, 403, 413, 423, 430, 431, 432, 433, 434, 435, 436, 437, 438, 439, 443, 453, 463, 473, 483, 493, 503, 513, 523, 530, 531, 532, 533, 534, 535, 536, 537, 538, 539, 543, 553, 563, 573, 583, 593, 603, 613, 623, 630, 631, 632, 633, 634, 635, 636, 637, 638, 639, 643, 653, 663, 673, 683, 693, 703, 713, 723, 730, 731, 732, 733, 734, 735, 736, 737, 738, 739, 743, 753, 763, 773, 783, 793, 803, 813, 823, 830, 831, 832, 833, 834, 835, 836, 837, 838, 839, 843, 853, 863, 873, 883, 893, 903, 913, 923, 930, 931, 932, 933, 934, 935, 936, 937, 938, 939, 943, 953, 963, 973, 983, 993]\n"
+     ]
+    }
+   ],
    "source": [
     "\"\"\"\n",
     "Find all of the numbers from 1-1000 that have a 3 in them\n",
@@ -74,7 +82,7 @@
     "    num1 = item(i)\n",
     "    if num1:\n",
     "        list1.append(num1)\n",
-    "print(list1)\n",
+    "#print(list1)\n",
     "\n",
     "####### Method 2 #######\n",
     "item_3 = [x for x in range(1,1001) if '3' in str(x)]\n",
@@ -83,6 +91,64 @@
     "item_3a = list(filter(lambda x: '3' in str(x),list(range(1,1001))))\n",
     "print(item_3a)\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 03. Number of spaces"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter string: my name is silver\n",
+      "3\n"
+     ]
+    }
+   ],
+   "source": [
+    "\"\"\"\n",
+    "Count the number of spaces in a string\n",
+    "input:my name is silver\n",
+    "\"\"\"\n",
+    "\n",
+    "####### Method 1 #######\n",
+    "n=0\n",
+    "string = input(\"Enter string: \")\n",
+    "for i in string:\n",
+    "    if i==' ':\n",
+    "        n+=1\n",
+    "#print(n)\n",
+    "\n",
+    "####### Method 2 #######\n",
+    "a = len([i for i in string if i==' '])\n",
+    "#print(a)\n",
+    "\n",
+    "####### Method 3 #######\n",
+    "b = len(list(filter(lambda x: x==' ',string)))\n",
+    "print(b)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
