--- a/12_Map_Filter_Reduce.ipynb
+++ b/12_Map_Filter_Reduce.ipynb
@@ -118,18 +118,17 @@
     "Count the number of spaces in a string\n",
     "input:my name is silver\n",
     "\"\"\"\n",
-    "\n",
     "####### Method 1 #######\n",
     "n=0\n",
     "string = input(\"Enter string: \")\n",
     "for i in string:\n",
     "    if i==' ':\n",
     "        n+=1\n",
-    "#print(n)\n",
+    "print(n)\n",
     "\n",
     "####### Method 2 #######\n",
     "a = len([i for i in string if i==' '])\n",
-    "#print(a)\n",
+    "print(a)\n",
     "\n",
     "####### Method 3 #######\n",
     "b = len(list(filter(lambda x: x==' ',string)))\n",
@@ -137,11 +136,51 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "### 04. Remove vowels"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter string: education chrismas is a big fest\n",
+      "dctn chrsms s  bg fst\n",
+      "dctn chrsms s  bg fst\n",
+      "dctn chrsms s  bg fst\n"
+     ]
+    }
+   ],
+   "source": [
+    "\"\"\"\n",
+    "Remove all of the vowels in a string\n",
+    "input:'education chrismas is a big fest'\n",
+    "\"\"\"\n",
+    "str1= input('Enter string: ')\n",
+    "vowels = \"aeiou\"\n",
+    "remain = []\n",
+    "for i in str1:\n",
+    "    if i not in vowels:\n",
+    "        remain.append(i)\n",
+    "a = \"\".join(remain)\n",
+    "print(a)\n",
+    "\n",
+    "'''Or'''\n",
+    "lis1= [x for x in str1 if x not in 'aeiou']\n",
+    "str2 = \"\".join(lis1)\n",
+    "print(str2)\n",
+    "\n",
+    "'''Or'''\n",
+    "a= list(filter(lambda x: x not in 'aeiou',str1))\n",
+    "print(\"\".join(a))\n"
+   ]
   },
   {
    "cell_type": "code",
