Added a new file

--- a/12_Map_Filter_Reduce.ipynb
+++ b/12_Map_Filter_Reduce.ipynb
@@ -26,7 +26,7 @@
     "\"\"\"\n",
     "Find all of the numbers from 1-1000 that are divisible by 7\n",
     "\"\"\"\n",
-    "####### Method 1 #######\n",
+    "#### Method 1 ####\n",
     "list1 = []\n",
     "def divisible(number):\n",
     "    if number%7==0:\n",
@@ -38,15 +38,19 @@
     "        list1.append(num1)\n",
     "print(list1)\n",
     "\n",
-    "####### Method 2 #######\n",
+    "#### Method 2 ####\n",
     "    \n",
     "divisible_7 = [x for x in range(1,1001) if x%7==0]\n",
     "#print(divisible_7)\n",
     "\n",
-    "####### Method 3 #######\n",
+    "#### Method 3 ####\n",
     "\n",
-    "divisible_7a = list(filter(lambda x: x%7==0,list(range(1,1001))))\n",
-    "#print(divisible_7a)\n"
+    "divisible2_7 = list(filter(lambda x: x%7==0,list(range(1,1001))))\n",
+    "#print(divisible_7a)\n",
+    "\n",
+    "\n",
+    "'''Filter takes a function and a collection. \n",
+    "It returns a collection of every item for which the function returned True.'''"
    ]
   },
   {
@@ -73,7 +77,7 @@
     "\"\"\"\n",
     "Find all of the numbers from 1-1000 that have a 3 in them\n",
     "\"\"\"\n",
-    "####### Method 1 #######\n",
+    "#### Method 1 ####\n",
     "list1 = []\n",
     "def item(number):\n",
     "    if '3' in str(number):\n",
@@ -84,10 +88,10 @@
     "        list1.append(num1)\n",
     "#print(list1)\n",
     "\n",
-    "####### Method 2 #######\n",
+    "#### Method 2 ####\n",
     "item_3 = [x for x in range(1,1001) if '3' in str(x)]\n",
     "\n",
-    "####### Method 3 #######\n",
+    "#### Method 3 ####\n",
     "item_3a = list(filter(lambda x: '3' in str(x),list(range(1,1001))))\n",
     "print(item_3a)\n"
    ]
@@ -118,7 +122,7 @@
     "Count the number of spaces in a string\n",
     "input:my name is silver\n",
     "\"\"\"\n",
-    "####### Method 1 #######\n",
+    "#### Method 1 ####\n",
     "n=0\n",
     "string = input(\"Enter string: \")\n",
     "for i in string:\n",
@@ -126,11 +130,11 @@
     "        n+=1\n",
     "print(n)\n",
     "\n",
-    "####### Method 2 #######\n",
+    "#### Method 2 ####\n",
     "a = len([i for i in string if i==' '])\n",
     "print(a)\n",
     "\n",
-    "####### Method 3 #######\n",
+    "#### Method 3 ####\n",
     "b = len(list(filter(lambda x: x==' ',string)))\n",
     "print(b)\n"
    ]
@@ -172,21 +176,55 @@
     "a = \"\".join(remain)\n",
     "print(a)\n",
     "\n",
-    "'''Or'''\n",
+    "#### Method 2 ####\n",
     "lis1= [x for x in str1 if x not in 'aeiou']\n",
     "str2 = \"\".join(lis1)\n",
     "print(str2)\n",
     "\n",
-    "'''Or'''\n",
+    "#### Method 3 ####\n",
     "a= list(filter(lambda x: x not in 'aeiou',str1))\n",
     "print(\"\".join(a))\n"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
+   "source": [
+    "### 05. String having less than 4 letters"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter a string: The quick brown fox jumped over the lazy dog\n",
+      "['The', 'fox', 'the', 'dog']\n",
+      "['The', 'fox', 'the', 'dog']\n"
+     ]
+    }
+   ],
+   "source": [
+    "\"\"\"\n",
+    "Find all of the words in a string that are less than 4 letters\n",
+    "input:The quick brown fox jumped over the lazy dog\n",
+    "\"\"\"\n",
+    "lis1 = input(\"Enter a string: \").split()\n",
+    "b= [x for x in lis1 if len(x)< 4]\n",
+    "print(b)\n",
+    "\n",
+    "'''or'''\n",
+    "c= list(filter(lambda x: len(x)<4, lis1))\n",
+    "print(c)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
