Added a new file

--- a/12_Map_Filter_Reduce.ipynb
+++ b/12_Map_Filter_Reduce.ipynb
@@ -225,6 +225,44 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "### 06. All consonants"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter string: The quick brown fox jumped over the lazy dog\n",
+      "['T', 'h', 'q', 'c', 'k', 'b', 'r', 'w', 'n', 'f', 'x', 'j', 'm', 'p', 'd', 'v', 'r', 't', 'h', 'l', 'z', 'y', 'd', 'g']\n",
+      "['T', 'h', 'q', 'c', 'k', 'b', 'r', 'w', 'n', 'f', 'x', 'j', 'm', 'p', 'd', 'v', 'r', 't', 'h', 'l', 'z', 'y', 'd', 'g']\n"
+     ]
+    }
+   ],
+   "source": [
+    "\"\"\"\n",
+    "A list of all consonants in the sentence.\n",
+    "input:'The quick brown fox jumped over the lazy dog'\n",
+    "\"\"\"\n",
+    "sent= input('Enter string: ')\n",
+    "a = [i for i in sent if i not in 'aeiou ']\n",
+    "print(a)\n",
+    "\n",
+    "'''or'''\n",
+    "lis1= list(filter(lambda x: x not in 'aeiou ', sent))\n",
+    "print(lis1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
